# auditable-agents

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: bench.py  ollama_model.py  real_model.py  run_demo.py  run_live.py  run_scenarios.py
scenarios/: approve.audit.txt  reject.audit.txt  rollback.audit.txt
src/auditable_agents/: __init__.py  agent.py  audit.py  event_store.py  record_replay.py  runner.py  saga.py  workflow.py
tests/: test_determinism.py  test_divergence.py  test_exactly_once.py  test_input_sensitivity.py  test_saga_state.py
